# RackMind

./: .gitignore  README.md  SIMULATOR_GUIDE.md  config.yaml.example  phase1.md  plan.md  pyproject.toml  run.py
dc-simulator/: README.md  SIMULATOR_GUIDE.md  dashboard.py  pyproject.toml
dc-simulator/results/: leaderboard.csv
dc-simulator/src/agents/: base.py  random_agent.py
dc-simulator/src/dc_sim/: leaderboard.py  main.py  simulator.py  telemetry.py
dc-simulator/src/dc_sim/agents/: random_agent.py
dc-simulator/src/dc_sim/api/: __init__.py  eval_routes.py  routes.py
dc-simulator/src/dc_sim/models/: __init__.py  carbon.py  cooling.py  facility.py  network.py  thermal.py  workload.py
dc-simulator/tests/: __init__.py  test_api.py  test_evaluation.py  test_power.py  test_thermal.py  test_workload.py
results/: leaderboard.csv
src/agents/: __init__.py  llm_agent.py
src/dc_sim/: __init__.py  clock.py  config.py  evaluation.py  failures.py  main.py  runner.py  telemetry.py
src/dc_sim/agents/: __init__.py  base.py  runner.py
src/dc_sim/api/: routes.py
src/dc_sim/models/: __init__.py  gpu.py  power.py  storage.py
tests/: conftest.py
