[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-simulator"
version = "0.1.0"
description = "Simulated data centre environment for LLM agent development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "streamlit>=1.29.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]
llm = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dc_sim*", "agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
